adding unity tests